# tradoxus-contract

./: README.md
Research/: certificate-nft-research.md  nft-achievements-research.md
contracts/: Cargo.toml
contracts/contracts/nft-contract/: Cargo.toml
contracts/contracts/nft-contract/src/: contract.rs  events.rs  lib.rs  storage.rs  types.rs
contracts/contracts/nft-contract/test_snapshots/test/: test_add_issuer_fails_if_already_exists.1.json  test_admin_add_issuer.1.json  test_admin_remove_issuer.1.json  test_admin_remove_issuer_fail.1.json  test_claim_admin.1.json  test_claim_admin_fail.1.json  test_mint_certificate.1.json  test_verify_certificate_failed.1.json
contracts/nft-contract/: README.md
contracts/nft-contract/src/: errors.rs  test.rs  utils.rs
contracts/nft-contract/test_snapshots/test/: init_only_once.1.json  test_admin_add_issuer_fail.1.json  test_mint_certificate_invalid_signature.1.json  test_signature.1.json  test_transfer_admin.1.json  test_verify_certificate.1.json  test_verify_certificate_failed_certificate_not_found.1.json
ipfs-server/: Cargo.toml
ipfs-server/config/: main_sample.toml
ipfs-server/src/: lib.rs  main.rs
ipfs-server/src/config/: mod.rs
ipfs-server/src/contract/: keypair.rs  mod.rs  util.rs
ipfs-server/src/core/: arweave.rs  keypair.rs  mod.rs
ipfs-server/src/error/: mod.rs
