[package]
name = "ipfs_server"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.11"
env_logger = "0.11.7"
log = "0.4"
thiserror = "2.0.12"
lazy_static = "1.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"


# arweave
arweave-rs = "0.2.0"

#http
axum = "0.8.3"
url = "2.2"
hyper = { version = "1.6.0", features = ["full"] }
hyper-tls = "0.6.0"

#db
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "migrate",
] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# soroban
soroban-sdk = "22.0.7"
hex = "0.4.3"
sha3 = "0.10.8"                                             # Keccak256
base64 = "0.22.1"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
rand = { version = "0.9.0" }


[dev_dependencies]
fake = "4.2.0"
